syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kon.hello";
option java_outer_classname = "HelloWorldProto";

package helloworld;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service Greeter {

    rpc SayHello(HelloRequest) returns (HelloReply) {}

}

message StreamReqData {
    string data = 1;
}

message StreamResData {
    string data = 1;
}

service Streamer {
    // 服务端推送流
    rpc GetStream(StreamReqData) returns (stream StreamResData) {}
    // 客户端推送流
    rpc PutStream(stream StreamReqData) returns (StreamResData) {}
    // 双向流
    rpc AllStream(stream StreamReqData) returns (stream StreamResData) {}
}